[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-glowmarkt"
version = "3.0.0"
description = "Home Assistant integration for Glowmarkt/Bright smart meter data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "voluptuous>=0.13.1",
]

[project.urls]
Repository = "https://github.com/cjw85/ha-glowmarkt"
Issues = "https://github.com/cjw85/ha-glowmarkt/issues"

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "isort==6.0.1",
    "pytest-homeassistant-custom-component>=0.13,<0.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components.glowmarkt*"]
namespaces = true

[tool.setuptools.package-data]
"custom_components.glowmarkt" = [
    "manifest.json",
    "translations/*.json",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "custom_components",
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
